Fixed overlapping image on hover

--- a/alt_style.css
+++ b/alt_style.css
@@ -87,25 +87,33 @@ header button:hover {
 
 .card{
     display: flex;
-    flex: 0 1 30%;
     max-width: 30%;
-    justify-content: space-evenly;
 }
 
 .cardimg{
-    height: 12rem;
+    height: 13rem;
     max-width: 95%;
+    padding: 2rem;
 }
 
 #generator{
-    height: 18rem;
+    height: 17rem;
     max-width: 100%;
+    padding-right: 2rem;
 }
 
 #generator h4{
     position: relative;
-    top: 16rem;
+    top: 18rem;
     right: 20rem;
+    font-size: 2rem;
+    padding-bottom: 2rem;  
+}
+
+.card h4{
+    position: relative;
+    top: 15rem;
+    right: 16rem;
     font-size: 2rem;
     padding-bottom: 2rem;
 }
@@ -130,7 +138,7 @@ hr{
 }
 
 .card:hover {
-  transform: scale(1.5);
+  transform: scale(1.15);
 }
 
 .vl{
